--- a/BackEndFinal/BackEndFinal/Views/Home/Index.cshtml
+++ b/BackEndFinal/BackEndFinal/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model HomeVm
 @{
     ViewData["Title"] = "Index";
 }
@@ -18,9 +18,9 @@
                             <div class="col-md-7 col-md-offset-left-5">
                                 <div class="slide-content-wrapper">
                                     <div class="slide-content">
-                                        <h3>EDUCATION MAKES </h3>
-                                        <h2>PROPER HUMANITY </h2>
-                                        <p>I must explain to you how all this mistaken idea of denouncing pleasure and prsing pain was born and I will give you a complete account of the system  </p>
+                                        <h3>@Html.Raw(Model.SlidersDesc.Title) </h3>
+                                    
+                                        <p>@Model.SlidersDesc.Desc </p>
                                         <a class="default-btn" href="about.html">Learn more</a>
                                     </div>
                                 </div>
