--- a/BackEndFinal/BackEndFinal/Views/Home/Index.cshtml
+++ b/BackEndFinal/BackEndFinal/Views/Home/Index.cshtml
@@ -9,31 +9,34 @@
 <main>
     <section id="slider-container" class="slider-area">
         <div class="slider-owl owl-theme owl-carousel">
-            <!-- Start Slingle Slide -->
-            <div class="single-slide item" style="background-image: url(img/slider/slider1.jpg)">
-                <!-- Start Slider Content -->
-                <div class="slider-content-area">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-7 col-md-offset-left-5">
-                                <div class="slide-content-wrapper">
-                                    <div class="slide-content">
-                                        <h3>@Html.Raw(Model.SlidersDesc.Title) </h3>
-                                    
-                                        <p>@Model.SlidersDesc.Desc </p>
-                                        <a class="default-btn" href="about.html">Learn more</a>
+            Start Slingle Slide
+            @foreach (var item in Model.Sliders)
+            {
+                <div class="single-slide item" style="background-image: url(/img/slider/@item.ImageUrl)">
+                    Start Slider Content
+                    <div class="slider-content-area">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-7 col-md-offset-left-5">
+                                    <div class="slide-content-wrapper">
+                                        <div class="slide-content">
+                                            <h3>@item.Title) </h3>
+
+                                            <p>@item.Description </p>
+                                            <a class="default-btn" href="about.html">Learn more</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    Start Slider Content
                 </div>
-                <!-- Start Slider Content -->
-            </div>
-            <!-- End Slingle Slide -->
-            <!-- Start Slingle Slide -->
+            }
+            End Slingle Slide
+            Start Slingle Slide
             <div class="single-slide item" style="background-image: url(img/slider/slider2.jpg)">
-                <!-- Start Slider Content -->
+                Start Slider Content
                 <div class="slider-content-area">
                     <div class="container">
                         <div class="row">
@@ -50,12 +53,12 @@
                         </div>
                     </div>
                 </div>
-                <!-- Start Slider Content -->
+                Start Slider Content
             </div>
-            <!-- End Slingle Slide -->
-            <!-- Start Slingle Slide -->
+            End Slingle Slide
+            Start Slingle Slide
             <div class="single-slide item" style="background-image: url(img/slider/slider3.jpg)">
-                <!-- Start Slider Content -->
+                Start Slider Content
                 <div class="slider-content-area">
                     <div class="container">
                         <div class="row">
@@ -72,9 +75,9 @@
                         </div>
                     </div>
                 </div>
-                <!-- Start Slider Content -->
+                Start Slider Content
             </div>
-            <!-- End Slingle Slide -->
+            End Slingle Slide
         </div>
     </section>
     <!-- Background Area End -->
@@ -85,58 +88,27 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="notice-left">
                         <h3>notice board</h3>
-                        <div class="single-notice-left mb-25 pb-25">
-                            <h4>5, June 2017</h4>
-                            <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                        </div>
-                        <div class="single-notice-left mb-25 pb-25">
-                            <h4>4, June 2017</h4>
-                            <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                        </div>
-                        <div class="single-notice-left pb-75">
-                            <h4>3, June 2017</h4>
-                            <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                        </div>
-                        <div class="single-notice-left mb-25 pb-25">
-                            <h4>5, June 2017</h4>
-                            <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                        </div>
-                        <div class="single-notice-left mb-25 pb-25">
-                            <h4>4, June 2017</h4>
-                            <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                        </div>
-                        <div class="single-notice-left pb-70">
-                            <h4>3, June 2017</h4>
-                            <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                        </div>
-                        <div class="single-notice-left mb-25 pb-25">
-                            <h4>5, June 2017</h4>
-                            <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                        </div>
-                        <div class="single-notice-left mb-25 pb-25">
-                            <h4>4, June 2017</h4>
-                            <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                        </div>
-                        <div class="single-notice-left pb-70">
-                            <h4>3, June 2017</h4>
-                            <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                        </div>
+                        @foreach (var notice in Model.noticeBoards)
+                        {
+                            <div class="single-notice-left mb-25 pb-25">
+                                <h4>@notice.Date</h4>
+                                <p>@notice.Description </p>
+                            </div>
+                        }
+
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="notice-right">
-                        <div class="single-notice-right mb-25 pb-25">
-                            <h3>PROFESSIONAL TEACHER</h3>
-                            <p>I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings </p>
-                        </div>
-                        <div class="single-notice-right mb-25 pb-25">
-                            <h3>Online courses</h3>
-                            <p>I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings </p>
-                        </div>
-                        <div class="single-notice-right">
-                            <h3>easy to addmission</h3>
-                            <p>I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings </p>
-                        </div>
+                        @foreach (var noticeRight in Model.noticeRights)
+                        {
+                            <div class="single-notice-right mb-25 pb-25">
+                                <h3>@noticeRight.Name</h3>
+                                <p>@noticeRight.Description </p>
+                            </div>
+
+                        }
+
                     </div>
                 </div>
             </div>
@@ -149,9 +121,9 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-left-4 col-sm-8 col-md-offset-left-4">
                     <div class="choose-content text-left">
-                        <h2>WHY YOU CHOOSE EDUHOME ?</h2>
-                        <p>I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings  the master-builder of humanit happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because. </p>
-                        <p class="choose-option">I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings  the master-builder. </p>
+                        <h2>@Model.viewcourses.Question</h2>
+                        <p>@Model.viewcourses.Description </p>
+                        <p class="choose-option">@Model.viewcourses.Click </p>
                         <a class="default-btn" href="course-details.html">view courses</a>
                     </div>
                 </div>
@@ -165,63 +137,33 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="section-title">
-                        <img src="img/icon/section.png" alt="section-title">
-                        <h2>COURSES WE OFFER</h2>
+                        <img src="@Model.courseweoffer.ImageUrl" alt="@Model.courseweoffer.ImageUrl">
+                        <h2>@Model.courseweoffer.Name</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <div class="single-course">
-                        <div class="course-img">
-                            <a href="course-details.html">
-                                <img src="img/course/course1.jpg" alt="course">
-                                <div class="course-hover">
-                                    <i class="fa fa-link"></i>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="course-content">
-                            <h3><a href="course-details.html">CSE ENGINEERING</a></h3>
-                            <p>I must explain to you how all this a mistaken idea of denouncing great explorer of the rut the is lder of human happiness</p>
-                            <a class="default-btn" href="course-details.html">read more</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <div class="single-course">
-                        <div class="course-img">
-                            <a href="course-details.html">
-                                <img src="img/course/course2.jpg" alt="course">
-                                <div class="course-hover">
-                                    <i class="fa fa-link"></i>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="course-content">
-                            <h3><a href="course-details.html">CSE ENGINEERING</a></h3>
-                            <p>I must explain to you how all this a mistaken idea of denouncing great explorer of the rut the is lder of human happiness</p>
-                            <a class="default-btn" href="course-details.html">read more</a>
+                @foreach (var rows in Model.rows)
+                {
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <div class="single-course">
+                            <div class="course-img">
+                                <a href="course-details.html">
+                                    <img src="img/course/course1.jpg" alt="course">
+                                    <div class="course-hover">
+                                        <i class="fa fa-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="course-content">
+                                <h3><a href="course-details.html">@rows.Name</a></h3>
+                                <p>@rows.Description</p>
+                                <a class="default-btn" href="course-details.html">@rows.Click</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4 hidden-sm col-xs-12">
-                    <div class="single-course">
-                        <div class="course-img">
-                            <a href="course-details.html">
-                                <img src="img/course/course3.jpg" alt="course">
-                                <div class="course-hover">
-                                    <i class="fa fa-link"></i>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="course-content">
-                            <h3><a href="course-details.html">CSE ENGINEERING</a></h3>
-                            <p>I must explain to you how all this a mistaken idea of denouncing great explorer of the rut the is lder of human happiness</p>
-                            <a class="default-btn" href="course-details.html">read more</a>
-                        </div>
-                    </div>
-                </div>
+
+                }
             </div>
         </div>
     </div>
